Changes made from the "0.7.0" release to the "0.8.0" release:
-------------------------------------------------------------

* Bertrand Coconnier:

- Fixed a bug which caused artifacts when rendering glyphes that extend beyond
  the EM square.
- Fixed a bug which prevented letters l and i to be displayed at small scales
  when GLC_HINTING_QSO and GLC_TEXTURE were enabled.
- Side effect of the above bug fix : the antialiasing is improved for most
  characters since they are no longer located against the edges of the texture.
- Fixed a bug in glcGenFontID() which could return the ID of an existing font.
- Fixed a race condition in glcGenContext()
- Function glcGetStringCharMetric() now returns metrics in global string
  coordinates (otherwise the kerning can not be measured)
- Fixed bug #1987563 (Kerning does not work when GLC_GL_OBJECTS is enabled)
  Thanks to GenPFault for the bug report.
- Fixed bug #2012579 (Mac OSX Leopard compiling bug) - Thanks to Michael Strobel
  and Tim Baumgartner for the bug report and the patch.
- Fixed bug #1980982 (Checks for MinGW in the configure script are incomplete)
- Feature request #1947346 : added files for pkg-config (thanks to Giel
  van Shijndel and Dennis Schridde for providing them)
- Fixed bug #1947464 (Warnings are generated when compiling with gcc option
  -Wstrict-prototypes)
- Added backface culling to the extruded rendering mode
- Extrusion and GLC_TRIANGLE mode now uses VBOs whenever the gfx card supports
  them.
- Negative values passed to glcResolution() now raise GLC_PARAMETER_ERROR
- Simplified a bit the internal management of the resolution
- Fixed bug #1935557 (Fonts are not rendered correctly when the resolution is
  changed using glcResolution).
- The configure script now exports a summary of the parameters values
- Replaced glPush/PopClientAttrib() for vertex arrays and VBOs by explicit
  save/restore management in order to improve speed.